--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
 </style>
 </head>
 <body>
+   <a href="prez.html" class="btn">Voir la présentation</a>
 <div class="container">
     <div class="header">
         <h1>🤖 Quiz sur l'Intelligence Artificielle</h1>
