Enhance header with presentation link
Added a link to the presentation page in the header.

--- a/index.html
+++ b/index.html
@@ -350,8 +350,15 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1>🤖 Quiz sur l'Intelligence Artificielle</h1>
-    </div>
+    <h1>🤖 Quiz sur l'Intelligence Artificielle</h1>
+    <p style="margin-top:10px;">
+        <a href="prez.html" 
+           style="color:#667eea; text-decoration:none; font-weight:600;">
+           → Voir la présentation
+        </a>
+    </p>
+</div>
+
     <div class="progress-container">
         <div class="progress-bar">
             <div class="progress-fill"></div>
