Add prez-link class for presentation link styling

--- a/index.html
+++ b/index.html
@@ -345,18 +345,27 @@
             font-size: 36px;
         }
     }
+   .prez-link {
+    display: inline-block;
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #667eea;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+.prez-link:hover {
+    color: #764ba2;
+    text-decoration: underline;
+}
+
 </style>
 </head>
 <body>
 <div class="container">
     <div class="header">
     <h1>🤖 Quiz sur l'Intelligence Artificielle</h1>
-    <p style="margin-top:10px;">
-        <a href="prez.html" 
-           style="color:#667eea; text-decoration:none; font-weight:600;">
-           → Voir la présentation
-        </a>
-    </p>
+    <a href="prez.html" class="prez-link">→ Voir la présentation</a>
 </div>
 
     <div class="progress-container">
