Open presentation link in a new tab

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 <div class="container">
     <div class="header">
     <h1>🤖 Quiz sur l'Intelligence Artificielle</h1>
-    <a href="prez.html" class="prez-link">→ Voir la présentation</a>
+    <a href="prez.html" class="prez-link" target="_blank">→ Voir la présentation</a>
 </div>
 
     <div class="progress-container">
